# AI_DATARESEARCH

./: .env.example  .gitignore  CLAUDE.md  Capstone_document.md  MVP_DEMO_GUIDE.md  ORGANIZATION_SUMMARY.md  Readme.md  STRESS_TEST_REPORT.md  ai_pipeline.py  data_pipeline.py  deploy.py  dl_pipeline.py  main.py  ml_pipeline.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup_service.sh  start_server.py  test_api_simple.py  training_mappings.md
.claude/: settings.local.json
Frontend/: index.html
Frontend/css/: style.css
Frontend/js/: main.js
Kiro/: API_DOCUMENTATION.md  CLEANUP_PLAN.md  DUPLICATE_CLEANUP_SUMMARY.md  ENHANCED_NEURAL_ARCHITECTURE.md  ENHANCED_TRAINING_PARSER_SUMMARY.md  FILE_ORGANIZATION_CLEANUP_SUMMARY.md  NEW_FEATURES_GUIDE.md  QUALITY_IMPROVEMENTS_EXAMPLES.md  QUALITY_METRICS_INTERPRETATION_GUIDE.md  QUALITY_MONITORING_RUNBOOK.md  QUALITY_TROUBLESHOOTING_GUIDE.md  TARGET_ACHIEVEMENT_ORGANIZATION_SUMMARY.md  TASK_1.3_COMPLETION_SUMMARY.md  TASK_3_COMPLETION_SUMMARY.md  TASK_4_COMPLETION_SUMMARY.md  TASK_5.1_COMPLETION_SUMMARY.md  TASK_5_COMPLETION_SUMMARY.md  TASK_7_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  TASK_9_FINAL_QUALITY_VALIDATION_SUMMARY.md  TRAINING_MAPPINGS_MAINTENANCE_GUIDE.md
Quality_Check/: FINAL_QUALITY_VALIDATION_REPORT.md  final_quality_validation.py  test_final_validation.py
config/: ai_config.yml  api_config.txt  api_config.yml  data_pipeline.yml  deployment.yml  dl_boost_config.json  dl_config.yml  ml_config.yml
data/feedback/: user_feedback.json
data/processed/: aggressively_optimized_data.json  dataset_relationships.json  domain_enhanced_training_20250622.json  domain_specific_augmentation.json  enhanced_training_data.json  enhanced_training_data_boosted.json  enhanced_training_data_graded.json  enhanced_training_data_optimized.json  enhanced_training_mappings.json  extraction_summary.json  final_training_validation_report.json  global_datasets.csv  graded_relevance_training.json  graded_training_data_test.json  intelligent_ground_truth.json  intelligent_ground_truth_backup.json  keyword_profiles.json  pipeline_execution_summary.json  semantically_enhanced_data.json  singapore_datasets.csv  singapore_datasets_no_lta.csv  synthetic_dataset_discovery_behavior.json  test_enhanced_training_data.json  test_validation_report.json  threshold_tuning_analysis.json  training_data_summary.json  training_validation_report.json  user_behavior_analysis.json
data/raw/: data.json  metadata summary.csv  user_behaviour.csv
deployment/: DEPLOYMENT_GUIDE.md  ai-research-assistant.service  deploy_production.sh  health_monitor.sh  logrotate.conf  nginx.conf
docs/: BACKEND_ARCHITECTURE.md  CONVERSATIONAL_QUERY_PROCESSING.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_SEARCH_API.md  FILE_ORGANIZATION.md  FINAL_PROJECT_REPORT.md  FUNCTIONAL_BASELINE.md  PERFORMANCE_METRICS_SYSTEM.md  PROJECT_TIMELINE.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md
docs/guides/: INSTALLATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  ai_setup_verification.md  api_setup_guide.md  ml_phase_prompt.md  readme_ml.txt
docs/summaries/: DL_PIPELINE_UPGRADE.md
outputs/: DEPENDENCY_UPDATE_SUMMARY.md  PROJECT_REORGANIZATION_SUMMARY.md  training_summary.json  validation_results.json
outputs/DL/: aggressive_optimization_20250624_211846.json  improved_training_results_20250622_143832.json  improved_training_results_20250622_154301.json  improved_training_results_20250622_192723.json  improved_training_results_20250622_215525.json  improved_training_results_20250623_073148.json  improved_training_results_20250624_162433.json  improved_training_results_20250624_170501.json  improved_training_results_20250624_183001.json  improved_training_results_20250624_190357.json  improved_training_results_20250624_193836.json  improved_training_results_20250624_201143.json  improved_training_results_20250624_201452.json  improved_training_results_20250624_205027.json  improved_training_results_20250624_210807.json  improved_training_results_20250624_211843.json  improved_training_results_20250624_222648.json  improved_training_results_20250624_222959.json  improved_training_results_20250625_093129.json  improved_training_results_20250625_133423.json  improved_training_results_20250626_060134.json  improved_training_results_20250627_001125.json  improved_training_results_20250627_014029.json  live_optimization_plan.json  quick_graded_enhancement_20250623_074901.json  quick_retrain_results_20250622_143012.json  target_achievement_report_20250623_075154.json
outputs/ai/: ai_pipeline_achievements_report.md
outputs/deploy/: deployment_pipeline_achievements_report.md  final_deployment_report.md
outputs/documentation/: ai_implementation_evidence.json  ai_integration_evidence.json  baseline_comparison.json  cache_efficiency_metrics.json  (+37 more)
src/: __init__.py
tests/: test_ai_system.py  test_api_config.py  test_api_debug.py  test_api_simple.py  test_automated_quality_validator.py  test_aws_comprehensive.py  test_aws_edge_cases.py  test_aws_specific_issues.py  test_aws_task_verification.py  test_aws_url_generation.py  test_banner.py  test_banner_metrics.py  test_banner_simple.py  test_complete_integration.py  test_complete_routing_system.py  test_concurrent_quality_processing.py  test_context_aware_query_enhancement.py  test_conversation_endpoint.py  test_conversational_query_processor.py  test_end_to_end_quality_integration.py  test_enhanced_api_response_system.py  test_enhanced_training_parser.py  test_integrated_quality_caching.py  test_integrated_query_enhancement.py  test_kaggle_url_fix.py  test_metrics.py  test_minimal_collector.py  test_monitoring_integration_simple.py  test_performance_benchmarking.py  test_performance_monitoring_integration.py  test_production_quality_validation.py  test_quality_caching_system.py  test_quality_monitoring_system.py  test_quality_reporting_analytics.py  test_query_router.py  test_routing_integration.py  test_simple_integration.py  test_source_priority_routing.py  test_system_source_coverage_performance.py  test_task_2_comprehensive.py  (+10 more)
(+146 files in other folders)
